Bug 327119 - Pixel brush outline with size 1 is invisible
Summary: Pixel brush outline with size 1 is invisible
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 2.7.2
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL: https://mega.co.nz/#!BYMWAAKb!PpXLeXJ...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-04 08:50 UTC by art333mio
Modified: 2013-12-02 10:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description art333mio 2013-11-04 08:50:40 UTC
Pixel brush outline with size 1 is invisible in most curcumstances (detailt are best demonstrated in video, link attached). Outlines of other brushes or of a pixel brush with a size > 1 are showing as expected.

Reproducible: Always

Steps to Reproduce:
1. Open or create file.
2. Switch to any brush
3. Switch to pixel brush
4. Set brush size to 1.

Actual Results:  
Brush outline is invisible

Expected Results:  
Brush outline is visible
Comment 1 Dmitry Kazakov 2013-11-04 09:25:45 UTC
Yep, even on bigger sizes it might be hard to see... Probably we need to transform it into a crosshair when it becomes too small (due to zoom level, for example)
Comment 2 art333mio 2013-11-04 15:23:37 UTC
(In reply to comment #1)
> Yep, even on bigger sizes it might be hard to see... Probably we need to
> transform it into a crosshair when it becomes too small (due to zoom level,
> for example)

Dmitry, it's not exactly like that: it is not hard to see. I can see it at first very well but then it becomes completely invisible. Watch the video carefully.
Comment 3 Dmitry Kazakov 2013-11-14 11:43:23 UTC
(In reply to comment #2)

Could you tell, which preset you used in this video to get this bug? When I choose 'pixel1'  preset which looks like the one on your video, I don't have this bug. The outline is always painted.
Comment 4 Halla Rempt 2013-11-15 11:54:42 UTC
I did rewrite the outline mode since 2.7 -- and didn't you rewrite it once more as well? I think that this bug might be solved, actually.
Comment 5 art333mio 2013-11-15 15:20:16 UTC
(In reply to comment #3)
> (In reply to comment #2)
> 
> Could you tell, which preset you used in this video to get this bug? When I
> choose 'pixel1'  preset which looks like the one on your video, I don't have
> this bug. The outline is always painted.

'pixel1' from fresh install. I haven't modify anything.
Comment 6 Dmitry Kazakov 2013-11-28 08:01:53 UTC
(In reply to comment #5)

Hi! Could you tell us, is the outline "invisible" or "almost invisible"?

The problem is that for me I cannot get into the state when there is no outline at all. It can be really small (say, a couple of pixels in diameter), but it is still present. I consulted with David and Timothee and they said that there should be no additional "crosshair" or anything to make such small outlines more visible, because it will make the precise painting less convenient. And for the case when the user just wants to make cursor a bit more visible, we have a special option "Outline and Crosshair Cursor", which can be found in the Settings menu.

So now I need to understand whether you can get into the state when there is no cursor at all, or you just have difficulties to see a too tiny cursor?

The first situation is surely a bug, and the second one can be cured by "Outline with Crosshair Cursor" option.

Btw, which version of Krita do you use? Did you try Krita Lime?
Comment 7 Dmitry Kazakov 2013-11-28 08:02:17 UTC
I'll mark it NEEDSINFO for now
Comment 8 art333mio 2013-11-30 00:28:52 UTC
(In reply to comment #6)
> (In reply to comment #5)
 
> Hi! Could you tell us, is the outline "invisible" or "almost invisible"?

> So now I need to understand whether you can get into the state when there is
> no cursor at all, or you just have difficulties to see a too tiny cursor?

It's completely invisible - not a pixel or a shade. I've supplied a video of good quality and resolution. What you see on the video is *exactly* what I see with my eyes. It is 100 % reproducible in my setup under steps described.

> bit more visible, we have a special option "Outline and Crosshair Cursor",
> which can be found in the Settings menu.

I can't find option with this name. (
 
> Btw, which version of Krita do you use? Did you try Krita Lime?
Usual Krita 2.7.2 Ubuntu pkg. 
I tried krita-testing from your PPA but it fails complaining on dependencies, I haven't dug into it yet.


UPD:

Tried to play with pixel Pixel Brush options. Results:

Bug shows itself when the following options selected: Gaussian blur or Soft brush.
Bug disappears if I select Default. I guess it should give some clue now. Can you reproduce it with this options?
Also it renders this bug no so important anymore. I think I can live with mentioned options set to 'Default' then.
Comment 9 Dmitry Kazakov 2013-11-30 09:00:01 UTC
Ok, good, probably, these settings are neded for seeing the problem. I'll check it a bit later.
Comment 10 Dmitry Kazakov 2013-12-02 10:15:07 UTC
Git commit ee5b5f12d743139de3474f25546f99e89715bac9 by Dmitry Kazakov.
Committed on 02/12/2013 at 10:14.
Pushed by dkazakov into branch 'master'.

Substitute too small brush outlines with a 1px circle

If the brush outline is too small to be shown on screen, substitute it
with a small 1px-diameter circle.

M  +10   -0    krita/ui/kis_config.cc
M  +3    -0    krita/ui/kis_config.h
M  +11   -4    krita/ui/tool/kis_tool_paint.cc
M  +1    -1    krita/ui/tool/kis_tool_paint.h

http://commits.kde.org/calligra/ee5b5f12d743139de3474f25546f99e89715bac9
Comment 11 Dmitry Kazakov 2013-12-02 10:19:18 UTC
Git commit 268154b617cc9c545bbd78f6cbaad011be7909bf by Dmitry Kazakov.
Committed on 02/12/2013 at 10:14.
Pushed by dkazakov into branch 'calligra/2.8'.

Substitute too small brush outlines with a 1px circle

If the brush outline is too small to be shown on screen, substitute it
with a small 1px-diameter circle.

M  +10   -0    krita/ui/kis_config.cc
M  +3    -0    krita/ui/kis_config.h
M  +11   -4    krita/ui/tool/kis_tool_paint.cc
M  +1    -1    krita/ui/tool/kis_tool_paint.h

http://commits.kde.org/calligra/268154b617cc9c545bbd78f6cbaad011be7909bf