Substitute too small brush outlines with a 1px circle

If the brush outline is too small to be shown on screen, substitute it
with a small 1px-diameter circle.

BUG:327119